examples/example_50/example_50.v
Definition foo : nat := O.
Fail Check foo.
